tests/paczka1/small_fuzzy/83472368.err
Error in line 9: A261 628 198,4
Error in line 8: mrgz6ygKyM A469 46,1
Error in line 2: SZrnY A532 0,2
